--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SolarTech Nashik - Solar Panel Installation Services</title>
+    <title>SNR Tech Nashik - Solar Panel Installation Services</title>
     <style>
         /* Base Styles */
         :root {
@@ -657,10 +657,10 @@
     <!-- About Section -->
     <section id="about" class="section">
         <div class="container">
-            <h2 class="section-title">About SolarTech Nashik</h2>
+            <h2 class="section-title">About SNR Tech Nashik</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Founded in 2015, SolarTech Nashik has been at the forefront of renewable energy solutions in Maharashtra. We specialize in customized solar installations for homes, businesses, and agricultural applications.</p>
+                    <p>Founded in 2015, SNR Tech Nashik has been at the forefront of renewable energy solutions in Maharashtra. We specialize in customized solar installations for homes, businesses, and agricultural applications.</p>
                     <p>Our mission is to make solar energy accessible, affordable, and reliable for every Nashik resident while promoting energy independence and environmental sustainability.</p>
                     <p>With over 500+ successful installations across Nashik district, our team of MNRE-certified professionals delivers quality workmanship, superior products, and exceptional customer service.</p>
                 </div>
@@ -812,7 +812,7 @@
             <div class="testimonial-container">
                 <div class="testimonial-item">
                     <div class="testimonial-content">
-                        <p>SolarTech transformed our energy consumption patterns. We now save over ₹5,000 monthly on electricity bills, and the installation was completed professionally within just 3 days.</p>
+                        <p>SNR Tech transformed our energy consumption patterns. We now save over ₹5,000 monthly on electricity bills, and the installation was completed professionally within just 3 days.</p>
                     </div>
                     <div class="testimonial-author">
                         <div class="author-img">
@@ -826,7 +826,7 @@
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-content">
-                        <p>As a manufacturing unit with high power demands, we were skeptical about solar. SolarTech designed a custom solution that has cut our operational costs by 60%. Their after-sales service is exceptional.</p>
+                        <p>As a manufacturing unit with high power demands, we were skeptical about solar. SNR Tech designed a custom solution that has cut our operational costs by 60%. Their after-sales service is exceptional.</p>
                     </div>
                     <div class="testimonial-author">
                         <div class="author-img">
